objects/UserActivation__e.object
<CustomObject>
    <description>This platform event is sent when an inactive user logs in. This PE will take care of assigning permission sets or License upgrade by traversing through the TrackPermissionSet object.</description>
    <fields>
        <fullName>LicenseUpdateNotRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LicenseUpdateNotRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProfileId__c</fullName>
        <label>Profile Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>User Activation</label>
    <pluralLabel>User Activation</pluralLabel>
</CustomObject>